# fastapi-tutorial

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml  pytest.ini  start.sh  test.sh
.github/workflows/: cd_workflow.yaml  ci_workflow.yaml
app/: main.py
app/core/: auth.py  config.py  container.py  lifespan.py  logger.py  redis.py
app/core/db/: session.py
app/core/errors/: error.py  handler.py
app/core/middlewares/: sqlalchemy.py
app/models/: constant.py
app/models/db/: class_.py  student.py  teacher.py
app/models/dtos/: class_.py  common.py  user.py
app/models/schemas/: class_.py  common.py  user.py
app/repositories/: __init__.py  class_repository.py  user_repository.py
app/routers/: __init__.py  class_.py  user.py
app/services/: __init__.py  class_service.py  user_service.py
tests/app/: conftest.py
tests/app/class/service/: test_class.py
tests/app/router/: test_class_router.py  test_user_router.py
tests/app/service/: test_class.py  test_class_notice.py  test_user.py
tests/app/user/service/: test_user.py
